--- a/public/test/test.html
+++ b/public/test/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html1>
+<html>
 <head>
 <title>Test Document</title>
 </head>
@@ -23,12 +23,6 @@
 <a></a>
 
 <test></test>
-
-<test234></test23>
-
-<test2></test2>
-
-<mytagsomething</dosl> 
 
 </body>
 </html>
