--- a/public/test/test.html
+++ b/public/test/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 <head>
 <title>Test Document</title>
 </head>
@@ -23,6 +24,8 @@
 <a></a>
 
 <test></test>
+
+<test2></test2>
 
 </body>
 </html>
